# ocr_clipboard

./: .gitignore  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
